template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: CloudFormation template to deploy CodeBuild

Resources:

  #VPC

  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16

  #Subnet

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: ap-south-1a

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: ap-south-1b

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: ap-south-1a

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: ap-south-1b

  #Internet Gateway

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway

  #Nat Gateway

  NatEip:
    Type: AWS::EC2::EIP
    DependsOn: AttachInternetGateway
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEip.AllocationId
      SubnetId: !Ref PublicSubnet1

  #Route Table

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachInternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref NatGateway

  PublicSubnet1RouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateSubnet1RouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2RouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2

  #Security Group

  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: This is a SG for Lambda created by CF
      VpcId: !Ref MyVPC

  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: This is a SG For RDS created by CF
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref LambdaSecurityGroup

  #Database

  MyDummyDatabaseSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: This is a subnet group created using CloudFormation
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      
  MyPostgresDatabase:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceIdentifier: dummy-database
      Engine: postgres
      EngineVersion: '18.3'
      DBInstanceClass: db.t3.micro
      AllocatedStorage: "20"
      StorageType: gp3
      MasterUsername: dummy_admin
      MasterUserPassword: Dummy#1234
      PubliclyAccessible: false
      VPCSecurityGroups:
        - !GetAtt RDSSecurityGroup.GroupId
      DBSubnetGroupName: !Ref MyDummyDatabaseSubnetGroup
      BackupRetentionPeriod: 0
      MultiAZ: false
      DeletionProtection: false

  #Connection String Store in Secret Manager

  DatabaseConnectionSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: dummy-project/connection-string
      SecretString: !Sub
        - Host=${Endpoint};Port=5432;Database=postgres;Username=dummy_admin;Password=Dummy#1234
        - Endpoint: !GetAtt MyPostgresDatabase.Endpoint.Address

  #Deployment

  CodeBuildDeployRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - codebuild.amazonaws.com
            Action:
              - sts:AssumeRole

      Policies:
        - PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action: 
                  - s3:*
                  - lambda:*
                  - logs:*
                  - ec2:*
                  - codeconnections:*
                  - ssm:*
                  - kms:*
                  - secretsmanager:*
                  - cloudformation:*
                  - iam:*
                  - apigateway:*
                Resource: "*"
          PolicyName: CodeBuildDeployPolicy

  CodeBuildDeployProject:
    Type: AWS::CodeBuild::Project
    Properties:
      Name: demo-project-deploy
      Artifacts:
        Type: NO_ARTIFACTS
      Environment:
        ComputeType: BUILD_GENERAL1_SMALL
        Image: aws/codebuild/amazonlinux-x86_64-standard:6.0
        Type: LINUX_CONTAINER
      ServiceRole: !GetAtt CodeBuildDeployRole.Arn
      Source:
        Type: GITHUB
        Location: https://github.com/Hasil-21/Dummy-Files-Hasil.git
        GitCloneDepth: 1
        BuildSpec: buildspec-deployment.yml
      

  #Migration

  CodeBuildMigrationRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal: 
              Service:
                - codebuild.amazonaws.com
            Action:
              - sts:AssumeRole
        
      Policies:
        - PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action: 
                  - s3:*
                  - lambda:*
                  - logs:*
                  - ec2:*
                  - rds:*
                  - codeconnections:*
                  - ssm:*
                  - kms:*
                  - secretsmanager:*
                Resource: "*"
          PolicyName: CodeBuildMigrationPolicy

  CodeBuildMigrationProject:
    Type: AWS::CodeBuild::Project
    Properties:
      Name: demo-project-migration
      Artifacts:
        Type: NO_ARTIFACTS
      Environment:
        ComputeType: BUILD_GENERAL1_SMALL
        Image: aws/codebuild/amazonlinux-x86_64-standard:6.0
        Type: LINUX_CONTAINER
        EnvironmentVariables:
          - Name: CONNECTION_STRING
            Value: demo-project/connection-string
            Type: SECRETS_MANAGER
      ServiceRole: !GetAtt CodeBuildMigrationRole.Arn
      Source:
        Type: GITHUB
        Location: https://github.com/Hasil-21/Dummy-Files-Hasil.git
        GitCloneDepth: 1
        BuildSpec: buildspec-migration.yml
      VpcConfig:
        VpcId: !Ref MyVPC
        Subnets:
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2
        SecurityGroupIds:
          - !GetAtt RDSSecurityGroup.GroupId

  #Pipeline

  CodePipelineRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:  
              Service:
                - codepipeline.amazonaws.com
            Action:
              - sts:AssumeRole
      
      Policies:
        - PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - s3:*
                  - codeconnections:*
                  - codebuild:*
                Resource: "*"
          PolicyName: CodePipelinePolicy

  ArtifactBucket:
    Type: AWS::S3::Bucket

  CodePipelineProject:
    Type: AWS::CodePipeline::Pipeline
    Properties:
      RoleArn: !GetAtt CodePipelineRole.Arn
      ArtifactStore:
        Type: S3
        Location: !Ref ArtifactBucket
      Stages:
        - Actions:
            - ActionTypeId:
                Category: Source
                Owner: AWS
                Provider: CodeStarSourceConnection
                Version: '1'
              Name: GitHub
              Configuration:
                ConnectionArn: arn:aws:codeconnections:ap-south-1:292578125952:connection/b317277a-0fbe-4331-827e-f33e3917a3ff
                FullRepositoryId: Hasil-21/Dummy-Files-Hasil
                BranchName: main
              OutputArtifacts:
                - Name: SourceOutput
          Name: Source 

        - Actions:
            - ActionTypeId:
                Category: Build
                Owner: AWS
                Provider: CodeBuild
                Version: '1'
              Name: DB
              Configuration:
                ProjectName: demo-project-migration
              InputArtifacts:
                - Name: SourceOutput
          Name: DatabaseMigration   

        - Actions:
            - ActionTypeId:
                Category: Build
                Owner: AWS
                Provider: CodeBuild
                Version: '1'
              Name: API
              Configuration:
                ProjectName: demo-project-deploy
              InputArtifacts:
                - Name: SourceOutput
          Name: LambdaDeploy
  
Outputs:
  SlsLambdaSecurityGroup:
    Value: !Ref LambdaSecurityGroup
  
  SlsPrivateSubnet1:
    Value: !Ref PrivateSubnet1

  SlsPrivateSubnet2:
    Value: !Ref PrivateSubnet2
